# python-can-cvector

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
src/can_cvector/: __init__.py  _abstraction.pyi  _abstraction.pyx  cvector.py
src/can_cvector/vxlapi/: xlclass.pxd  xldefine.pxd  xldriver.pxd
tests/: test_cvector.py
