[build-system]
build-backend = 'setuptools.build_meta'
requires = ["setuptools >= 58.0", "cython ~= 0.29.0", "wheel"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v"
testpaths = ["tests"]

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest {project}/tests"
build-frontend = "build"