[build-system]
build-backend = 'setuptools.build_meta'
requires = ["setuptools >= 62.0", "cython ~= 0.29.0"]

[project]
name = "python-can-cvector"
description = 'A partly cythonized version of the python-can VectorBus'
readme = "README.md"
requires-python = ">=3.7"
license = { text = "LGPL v3" }
keywords = [
  "python-can",
  "CAN",
  "vector",
  "cython",
]
authors = [
  { name = "Artur Drogunow", email = "artur.drogunow@zf.com" },
]
classifiers = [
  "Programming Language :: Cython",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Operating System :: Microsoft :: Windows",
  "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
  "Intended Audience :: Developers",
]
dependencies = [ "python-can>=4.0,<4.3" ]
dynamic = [ "version" ]

[project.optional-dependencies]
dev = [
    "black==23.3.*",
    "cibuildwheel",
    "mypy==1.2.*",
    "tox==4.*",
]

[project.entry-points."can.interface"]
cvector = "can_cvector.cvector:CVectorBus"

[project.urls]
Documentation = "https://github.com/zariiii9003/python-can-cvector#readme"
Issues = "https://github.com/zariiii9003/python-can-cvector/issues"
Source = "https://github.com/zariiii9003/python-can-cvector"
Homepage = "https://github.com/zariiii9003/python-can-cvector"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
can_cvector = ["py.typed", "*.pyi"]

[tool.setuptools.dynamic]
version = { attr = "can_cvector.__version__" }

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v"
testpaths = ["tests"]

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest {project}/tests"
build-frontend = "build"